@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/Attic/subversion-1.2.1.ebuild,v 1.3 2005/08/25 13:33:31 pauldv Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/Attic/subversion-1.2.1.ebuild,v 1.4 2005/08/25 13:47:37 pauldv Exp $
 
 inherit elisp-common libtool python eutils bash-completion flag-o-matic depend.apache perl-module
 
@@ -281,7 +281,13 @@ pkg_postinst() {
 	einfo "   2. restart xinetd.d: /etc/init.d/xinetd restart"
 	einfo
 	einfo " - svn over ssh:"
-	einfo "   1. create an svnserve wrapper in /usr/local/bin to set the umask you"
+	einfo "   1. Fix the repository permissions:"
+	einfo "        groupadd svnusers"
+	einfo "        chown -R root:svnusers /var/svn/repos/"
+	einfo "        chmod -R g-w /var/svn/repos"
+	einfo "        chmod -R g+rw /var/svn/repos/db"
+	einfo "        chmod -R g+rw /var/svn/repos/locks"
+	einfo "   2. create an svnserve wrapper in /usr/local/bin to set the umask you"
 	einfo "      want, for example:"
 	einfo "         #!/bin/bash"
 	einfo "         umask 002"
